Illustrate the use of threads to retrieve and accumulate data concurrently